<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/txtScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_score"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0_10"
        android:textSize="24sp"
        android:textColor="@android:color/holo_blue_dark"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/btnBackToHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_to_home"
        android:layout_marginTop="32dp" />
</LinearLayout>
