<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:gravity="center"
    android:orientation="vertical"
    android:background="#FAFAFA"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/loginLogo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/app_logo"
        android:contentDescription="@string/app_logo"
        android:layout_marginBottom="16dp" />


    <!-- Title -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="26sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginBottom="32dp" />

    <!-- Username Input -->
    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:padding="12dp"
        android:textColor="@color/black"
        android:textColorHint="#616161"
        tools:ignore="Autofill,VisualLintTextFieldSize" />

    <!-- Password Input -->
    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textColor="@color/black"
        android:textColorHint="#616161"
        tools:ignore="Autofill,VisualLintTextFieldSize" />

    <!-- Login Button -->
    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded_button"
        android:text="@string/login"
        android:textColor="#0277BD"
        android:textSize="16sp"
        tools:ignore="DuplicateSpeakableTextCheck,VisualLintButtonSize" />

    <!-- Register TextView (Clickable) -->
    <TextView
        android:id="@+id/tvRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:focusable="true"
        android:minHeight="48dp"
        android:text="@string/don_t_have_an_account_register"
        android:textColor="#1976D2"
        android:textSize="14sp"
        android:textStyle="bold" />
</LinearLayout>
