<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".RegisterActivity">

    <!-- Title -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Register"
        android:textSize="26sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginBottom="24dp"
        tools:ignore="HardcodedText" />

    <!-- Username Input -->
    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/enter_username"
        android:padding="12dp"
        android:background="@drawable/rounded_edittext"
        android:textColor="@color/black"
        android:textColorHint="@color/dark_gray"
        tools:ignore="Autofill,TextFields,VisualLintTextFieldSize" />

    <!-- Password Input -->
    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/enter_password"
        android:padding="12dp"
        android:background="@drawable/rounded_edittext"
        android:textColor="@color/black"
        android:textColorHint="@color/dark_gray"
        android:inputType="textPassword"
        android:layout_marginTop="12dp"
        tools:ignore="Autofill,VisualLintTextFieldSize" />
    <!-- Confirm Password Input -->
    <EditText
        android:id="@+id/etConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/confirm_password"
        android:padding="12dp"
        android:background="@drawable/rounded_edittext"
        android:textColor="@color/black"
        android:textColorHint="@color/dark_gray"
        android:inputType="textPassword"
        android:layout_marginTop="12dp"
        tools:ignore="Autofill,VisualLintTextFieldSize" />

    <!-- Register Button -->
    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_button"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="16sp"
        tools:ignore="DuplicateSpeakableTextCheck,VisualLintButtonSize" />
</LinearLayout>
